[tool.poetry]
name = "gitignoregh"
version = "1.1.7"
description = "gitignoregh is a command line tool that generates a .gitignore file for a project from the github gitignore templates repository"
authors = ["Saúl Piña <sauljabin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sauljabin/gitignoregh"
repository = "https://github.com/sauljabin/gitignoregh"
keywords = ["gitignore", "gitignoregh"]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Unix"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8"
rich = "^13"
GitPython = "^3"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
bandit = "*"
Faker = "*"
coverage = {extras = ["toml"], version = "*"}
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["gitignoregh"]
branch = true
omit = ["*tests/*", "*scripts/*", "*__init__.py", "gitignoregh/__main__.py"]

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']

[tool.poetry.scripts]
gitignoregh = "gitignoregh.cli:main"
gigh = "gitignoregh.cli:main"
