[project]
name = "gitignoregh"
version = "1.2.0"
description = "gitignoregh is a command line tool that generates a .gitignore file for a project from the github gitignore templates repository"
authors = [{ name = "Saúl Piña", email = "sauljabin@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["gitignore", "gitignoregh"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "click>=8",
    "rich>=14",
    "gitpython>=3",
]

[project.urls]
homepage = "https://github.com/sauljabin/gitignoregh"
repository = "https://github.com/sauljabin/gitignoregh"

[project.scripts]
gitignoregh = "gitignoregh.cli:main"
gigh = "gitignoregh.cli:main"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
coverage = { extras = ["toml"], version = "*" }
pre-commit = "*"
faker = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.coverage.run]
source = ["gitignoregh"]
branch = true
omit = ["*tests/*", "*scripts/*", "*__init__.py", "gitignoregh/__main__.py"]

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']
